@@ -20,6 +20,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 === Fixed
 
 * Honor explicit ID on tabs block and use it as ID prefix for tabs
+* Autogenerate IDs for tabsets and tabs in a manner consistent with section ID generation (#2)
 
 == 1.0.0-alpha.1 (2022-10-01) - @mojavelinux
 
